--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       </div>
 
     </div>
+    <div class="btn">
+      <button onclick="StartGame()">StartGame</button>
+    </div>
 
 
   </body>
